Fix layout issue with portfolio Page

--- a/src/app/components/portfolio/portfolio.component.css
+++ b/src/app/components/portfolio/portfolio.component.css
@@ -9,17 +9,17 @@
   width: 100%;
   margin-bottom: 10rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto auto;
 }
 
-.left__item {
-  width: 550px;
+.portfolio__item {
+  width: 100%;
   height: 100%;
   margin: auto;
 }
 
-.right__item {
-  width: 550px;
+.text__item {
+  width: 600px;
   height: 100%;
   margin: auto;
 }
